Fixed spacing on Add To Cart button in listview mode

--- a/htdocs/prod/web/assets/css/styles.css
+++ b/htdocs/prod/web/assets/css/styles.css
@@ -6490,7 +6490,7 @@ a#flyerModal {
   max-height: 200px;
   max-width: 200px;
 }
-.listViewWrapper .addToCart{
+.listViewWrapper .addToCartListView{
   margin-top: 20px;
   font-size: 12px;
   line-height: 18px;
